@@ -20,6 +20,7 @@ import org.springframework.stereotype.Service;
 import java.io.IOException;
 import java.security.GeneralSecurityException;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 @Service
 public class GoogleLoginService implements OAuthLoginService{
@@ -27,14 +28,16 @@ public class GoogleLoginService implements OAuthLoginService{
     private final JWTUtil jwtUtil;
     private final GoogleIdTokenVerifier verifier;
 
-    public GoogleLoginService(@Value("${google.client-id}") String clientId, UserRepository userRepository, Userservice userservice, JWTUtil jwtUtil,
+    public GoogleLoginService(@Value("${google.client-id}") String clientId,
+                              @Value("${spring.security.oauth2.client.registration.google.client-id}") String webClientId,
+                              Userservice userservice, JWTUtil jwtUtil,
                               NetHttpTransport transport, JsonFactory jsonFactory) {
         this.userservice = userservice;
 //        this.clientId = clientId;
         this.jwtUtil = jwtUtil;
         // Google ID 토큰 검증기 생성
         this.verifier = new GoogleIdTokenVerifier.Builder(transport, jsonFactory)
-                .setAudience(Collections.singletonList(clientId))
+                .setAudience(List.of(clientId,webClientId))
                 .build();
     }
 
